# OpenCLAdreon

app/: CMakeLists.txt  build.gradle
app/MTK/include/CL/: cl_hpp
app/src/main/: AndroidManifest.xml
app/src/main/assets/: sgemm.cl  simplegemm.cl
app/src/main/cpp/: CostHelper.h  MyCpuBilateral.cpp  MyCpuBilateral.h  MyOclBilateral.cpp  MyOclBilateral.h  MySobel.cpp  MySobel.h  jni_bilateral.cpp  jni_bilateral.h  jni_cl_common.h  jni_sobel.cpp  native-lib.cpp  ocl.cpp  opencv_ocl.cpp  sgemm.cpp  simplegemm.cpp
app/src/main/cpp/common/: common.cpp
app/src/main/java/com/tom/opencladreon/: BaseActivity.java  BilateralActivity.java  MainActivity.java  RunKernelActivity.java
app/src/main/res/layout/: activity_main.xml  activity_run_kernel.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
